# ExchangeRateViewer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.docker/: .dockerignore  Dockerfile  docker-compose.yaml
docker-sandbox/: Dockerfile  app.py
exchange_rate_viewer/: app.py  logging_config.yaml
exchange_rate_viewer/database/: currency_rates.db
exchange_rate_viewer/modules/: config.py  custom_exceptions.py  custom_logger.py  datetime_operations.py  input_validator_class.py  nbp_api_communication.py  plot.py  sqldb_communication.py  user_input_class.py
exchange_rate_viewer/static/: styles.css
exchange_rate_viewer/templates/: index.html
temp/: brudnopis.ipynb
test/: _context.py  test_app.py
test/modules/: test_datetime_operations.py  test_nbp_api_communication.py
