[tool.poetry]
name = "exchange-rate-viewer"
version = "0.1.0"
description = "App to check exchange rates for PLN to other currencies using connection with NBP API"
authors = ["Grzegorz Wieczorek"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
matplotlib = "^3.8.2"
requests = "^2.31.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core==1.7.1"]
build-backend = "poetry.core.masonry.api"
